--- a/ssg/package.json
+++ b/ssg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "ssg",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,15 +9,15 @@
     "typecheck": "react-router typegen && tsc --build --noEmit"
   },
   "dependencies": {
-    "@react-router/node": "^7.0.1",
-    "@react-router/serve": "^7.0.1",
+    "@react-router/node": "^7.0.2",
+    "@react-router/serve": "^7.0.2",
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.1"
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.0.1",
+    "@react-router/dev": "^7.0.2",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
